Enrollment editing and fixes
